Update on images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="brand">
                     <ion-icon name="bag-handle-outline"></ion-icon>
                     <h3>MORTYVATION</h3>
-                    <button id="#search">Search</button>
+                    <button id="search"><ion-icon name="search-circle-outline" style="height: 100%; width: 100%;"></ion-icon></button>
                 </div>
             </div>
 
@@ -37,6 +37,7 @@
                 <input type="text" name="no" id="no" placeholder="Item No">
                 <input type="text" name="text" id="text" placeholder="Enter Commodity Name">
                 <input type="text" name="price" id="price" placeholder="Enter Price of Commodity">
+                <input type="text" id="imageUrl" placeholder="Enter Image URL">
                 <button type="submit" id="create">Create Item</button>
                 <button type="submit" id="viewAll">View All Items</button>
                 <!-- <button type="reset" id="cancel">Cancel</button> -->
@@ -45,7 +46,7 @@
              <div class="items">
                
             </div>
-
+            </div>
         </div>
     </div>
     <script src="/dist/script.js"></script>
