--- a/userpage.html
+++ b/userpage.html
@@ -3,54 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <title>ADMIN</title>
+    <link rel="stylesheet" href="/userpage.css">
+    <title>User Page</title>
 </head>
 <body>
     <div class="main">
-
         <div class="container">
-
             <div class="top">
-
                 <div class="brand">
                     <ion-icon name="fast-food-outline"></ion-icon>
                     <h3>MORTEAVATION</h3>
                     <button id="search"><ion-icon name="search-circle-outline" style="height: 100%; width: 100%;"></ion-icon></button>
+                    <button id="cart"><ion-icon name="cart-outline" style="height: 100%; width: 100%;"></ion-icon></button>
                 </div>
             </div>
-
             <div class="bottom">
 
-             <div class="description">  
-                <p>Welcome Admin!!</p>
-                <p>Give em Good Deals!!</p>
-             </div>
-
-             <div class="form">
-                <input type="text" name="no" id="no" placeholder="Item No">
-                <input type="text" name="text" id="text" placeholder="Enter Commodity Name">
-                <input type="text" name="price" id="price" placeholder="Enter Price of Commodity">
-                <input type="text" id="imageUrl" placeholder="Enter Image URL">
-                <button type="submit" id="create">Create Item</button>
-                <button type="submit" id="viewAll">View All Items</button>
-                <!-- <button type="reset" id="cancel">Cancel</button> -->
-             </div>
-             <h2>Commodities</h2>
-             <div class="items">
-               
-            </div>
+                <div class="description">  
+                    <p>Welcome Our Esteemed Customer!!</p>
+                    <p>Enjoy The Meals We Have For You!!</p>
+                 </div>
+                <div class="items" id="product-list">
+                    <!-- Product items will be appended here -->
+                </div>
             </div>
         </div>
     </div>
-    <script src="/dist/script.js"></script>
+    <script src="/dist/userpage.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
