fixed issues with search buttons

--- a/userpage.html
+++ b/userpage.html
@@ -17,6 +17,7 @@
         <div class="container">
             <div class="top">
                 <div class="brand">
+                    <button id="home"><ion-icon name="home-outline" style="height: 100%; width: 100%;"></ion-icon></button>
                     <ion-icon name="fast-food-outline"></ion-icon>
                     <h3>MORTEAVATION</h3>
                     <button id="search"><ion-icon name="search-circle-outline" style="height: 100%; width: 100%;"></ion-icon></button>
