implemented a checkout page

--- a/cart.html
+++ b/cart.html
@@ -16,7 +16,7 @@
     <div class="main">
         <div class="container">
             <div class="top">
-                    <h3><ion-icon name="fast-food-outline"></ion-icon> MORTEAVATION</h3>
+                <h3><ion-icon name="arrow-back-outline" id="back"></ion-icon> <ion-icon name="fast-food-outline" id="brand" style="height: 40px; width: 40px;"></ion-icon> MORTEAVATION</h3>
                 <h4>Your Cart</h4>
                 <h5>Add Items To Checkout</h5>
             </div>
